--- a/development/sass/theme/partials/_typograpy.scss
+++ b/development/sass/theme/partials/_typograpy.scss
@@ -13,8 +13,7 @@
     @extend %display-text;
 }
 
-h1, h2, h3, h4, h5,
-.h1, .h2, .h3, .h4, .h5 {
+h1, h2, h3, h4, h5, .h1, .h2, .h3, .h4, .h5 {
     @extend .heading;
 }
 
